--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1697,7 +1697,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #43bff0;
+			background-color: #4b666e;
 			color: #fff !important;
 		}
 
@@ -1960,7 +1960,7 @@ input, select, textarea {
 		}
 
 		.icon.featured {
-			color: #EA8A95;
+			color: #c32439;
 			display: block;
 			margin: 0 0 1.5em 0;
 			cursor: default;
